# demo-ai-data-assistant

./: .env.example  .envrc  .gitignore  LICENSE  README.md  demo_examples.md  main.py  pyproject.toml
agents/: __init__.py  debugger.py  quality_checker.py  sql_generator.py
api/: __init__.py  main.py  models.py
api/routers/: __init__.py  debugger.py  quality.py  sql.py
config/: settings.py
scripts/: create_sample_data.py
tests/: conftest.py  test_api.py  test_debugger.py  test_quality_checkers.py  test_sql_generator.py
